fixed layout on smaller resolutions

--- a/src/pages/Content/styles/_partials/_main.scss
+++ b/src/pages/Content/styles/_partials/_main.scss
@@ -97,7 +97,7 @@
 		}
 
 		.articles-row-new {
-			grid-template-columns: repeat(4, 330px);
+			grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
 			justify-content: space-between;
 			column-gap: 30px;
 		}
